Set typography with variables and added spacing variables

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -6,7 +6,10 @@
 
   --nav-height: 10rem;
 
-  --grid-row-gap: 5rem;
+  --space-lg: 7rem;
+  --space-md: 5rem;
+  --space-sm: 3rem;
+  --space-xs: 2rem;
 }
 
 // COLOURS
