--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -8,7 +8,7 @@
 @mixin flexColumnSection {
   display: flex;
   flex-direction: column;
-  gap: var(--grid-row-gap);
+  gap: var(--space-md);
 }
 
 @mixin breakWords {
