Added starter style tag in nav and footer

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,1 +1,7 @@
 <nav><hr />Nav bar goes here<hr /></nav>
+
+<style lang="scss" is:global>
+  @use "../sass/abstracts" as *;
+</style>
+
+<script></script>
