--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -48,3 +48,35 @@
     margin-bottom: 1.5rem !important;
   }
 }
+
+// LAZY LOADING
+// Default animation - fade in from below
+.lazy-load {
+  opacity: 0;
+  transform: translateY(4rem);
+
+  &--show {
+    opacity: 1;
+    transform: translateY(0);
+
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+  }
+
+  &--custom {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+img[src="/img/image-loading.png"] {
+  object-fit: contain !important;
+  width: 100%;
+  height: 100%;
+  min-width: 5rem;
+  min-height: 5rem;
+}
+
+// Typography
+.break-words {
+  @include breakWords;
+}
