--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,5 +1,6 @@
 @use "./variables" as *;
 
+// LAYOUT
 @mixin absCenter {
   position: absolute;
   left: 50%;
@@ -10,13 +11,45 @@
 @mixin flexColumnSection {
   display: flex;
   flex-direction: column;
-  gap: var(--space-md);
+  //gap: 5rem;
+
+  & > *:not(:last-child) {
+    margin-bottom: var(--space-md);
+  }
 }
 
+// TYPOGRAPHY
 @mixin breakWords {
   // Make sure long URLs wrap
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
   hyphens: auto;
+}
+
+// ELEMENTS
+@mixin pageBreak {
+  content: "";
+  position: relative;
+  display: block;
+  margin: var(--space-xxs) 0 var(--space-xs);
+  width: 100%;
+  height: 0.5rem;
+  background-color: var(--color-primary-700);
+}
+
+@mixin overlay {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(var(--rgb-black), 0.7);
+  pointer-events: none;
+}
+
+@mixin overlay-light {
+  @include overlay;
+  background-color: rgba(var(--rgb-black), 0.5);
 }
