--- a/src/sass/base/_utilities.scss
+++ b/src/sass/base/_utilities.scss
@@ -76,7 +76,80 @@ img[src="/img/image-loading.png"] {
   min-height: 5rem;
 }
 
-// Typography
+// Mixins?
+
+// LAYOUT
+.absCenter,
+.absCenter--before::before,
+.absCenter--after::after {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.flexColumnSection {
+  display: flex;
+  flex-direction: column;
+  //gap: 5rem;
+
+  & > *:not(:last-child) {
+    margin-bottom: var(--space-md);
+  }
+}
+
+// TYPOGRAPHY
+.breakWords {
+  // Make sure long URLs wrap
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-word;
+  hyphens: auto;
+}
+
 .break-words {
   @include breakWords;
+}
+
+.visually-hide-text {
+  border: 0;
+  clip: rect(1px, 1px, 1px, 1px);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  width: 1px;
+}
+
+// ELEMENTS
+.pageBreak,
+.pageBreak--after::after,
+.pageBreak--before::before {
+  content: "";
+  position: relative;
+  display: block;
+  margin: var(--space-xxs) 0 var(--space-xs);
+  width: 100%;
+  height: 0.5rem;
+  background-color: var(--color-primary-700);
+}
+
+.overlay,
+.overlay--before::before,
+.overlay--after::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(var(--rgb-black), 0.7);
+  pointer-events: none;
+}
+
+.overlayLight,
+.overlayLight--before::before,
+.overlayLight--after::after {
+  @include overlay;
+  background-color: rgba(var(--rgb-black), 0.5);
 }
